# AutoFlow

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
app/: config.py  main.py
app/api/: input.py  logs.py  screen.py  templates.py  workflows.py
app/db/: models.py  session.py
app/engine/: coord_picker.py  factory.py  input.py  input_pyautogui.py  matcher_orb.py  runner.py  screen.py  screen_mss.py  workflow.py
app/mcp/: __main__.py  server.py
app/mcp/tools/: input.py  screen.py  templates.py  workflows.py
app/ws/: logs.py
tests/: conftest.py  test_config.py  test_db.py
tests/api/: test_health.py  test_input.py  test_logs.py  test_screen.py  test_workflow_run.py  test_workflows.py
tests/engine/: test_factory.py  test_input.py  test_matcher.py  test_screen.py  test_workflow.py
tests/mcp/: test_input_tools.py  test_mcp_integration.py  test_screen_tools.py  test_template_tools.py  test_workflow_tools.py
tests/ws/: test_ws_logs.py
webui/: package-lock.json  package.json
webui/src/: App.tsx  main.tsx
webui/src/api/: client.ts  types.ts
webui/src/components/: ConfirmDialog.tsx  ContextMenu.tsx  FlowNode.tsx  KeyRecorder.tsx  Layout.tsx  NodeConfigPanel.tsx  TemplatePicker.tsx
webui/src/hooks/: useTheme.ts  useUndoRedo.ts
webui/src/i18n/: en-US.ts  index.tsx  zh-CN.ts
webui/src/pages/: Logs.tsx  Settings.tsx  WorkflowEditor.tsx  WorkflowList.tsx
webui/src/styles/: editor.css  global.css  layout.css  logs.css  settings.css  workflow-list.css
webui/src/utils/: variables.ts
